chore: docs: WIP2

--- a/docs/tos.mdx
+++ b/docs/tos.mdx
@@ -12,7 +12,7 @@ import TOCInline from '@theme/TOCInline';
 
 <TOCInline toc={toc} />
 
-## 1. 개인정보 정책
+## 1. 개인정보 정책 (고지 사항)
 ### 1-1. 정보의 수집
 #### 1-1-1. 인스턴스 이용자의 정보의 수집 대상
 - (필수) 유저네임, 비밀번호: 가입 시에 개인 식별을 위해서 필수적으로 입력돼요. 유저네임은 다른 사용자에게 언제나 공개되고 비밀번호는 서버에 argon2 해쉬함수를 통해서 안전한 형태로 보관되며 다른 사용자에게 공개되지 않아요.
@@ -60,3 +60,14 @@ import TOCInline from '@theme/TOCInline';
 - 광과민성 발작을 일으킬 수 있는 미디어
 ### 2-3. 상습적인 개인 또는 특정 대상에 대한 비하 발언의 금지
 상습적인 개인 또는 특정 대상에 대한 비하발언은 건전한 타임라인/연합우주 문화를 만들어 가기 힘들다고 판단해여 이를 금지해요.
+
+## 3. 면책 조항
+### 3-1. 정보의 유실 가능성
+본 인스턴스는 아직 불안정하며, 언제든지 정보가 유실될 가능성이 있어요.
+
+다만, 모더레이터들은 이런 상황 발생 시 정보를 복구하기 위해서 최선을 다할 것이에요.
+
+## 4. 인스턴스의 폐쇄 (고지 사항)
+### 4-1. 모더레이터들의 의무
+- 본 인스턴스의 폐쇄 결정 시에는 최소 3달 전에 고지하며, 그 기간 이후 폐쇄하는 것을 원칙으로 해요.
+- 폐쇄 후 (1-1-1)에 따른 항목은 모두 복구 불가능한 방법으로 폐기돼요.
