chore: update health.mdx

--- a/docs/health.mdx
+++ b/docs/health.mdx
@@ -8,11 +8,11 @@ sidebar_position: 1
 본 페이지는 2023-07-29 20:51 KST에 마지막으로 업데이트 되었어요.
 :::
 
-현재 서버 상태: 🔴 **닫힘**
+현재 서버 상태: 🟢 **열림**
 <!-- 서버 상태는 🟢 🟡 🔴 🟠로 나타낸다 -->
 
 ## 점검 목록
 
 | 번호 | 시행 일시 | 점검 내용 | 완료 여부 |
 | - | ----- | ------ | --- |
-| 1 | 2023-07-29 (KST) 20:00 ~ 22:00 | 리버스 프록시 서버 이전 | 아니오 |
+| 1 | 2023-07-29 (KST) 20:00 ~ 22:00 | 리버스 프록시 서버 이전 | 예 |
