chore: update ToS

--- a/docs/tos.mdx
+++ b/docs/tos.mdx
@@ -47,8 +47,8 @@ import TOCInline from '@theme/TOCInline';
 본 인스턴스의 사용자는 다음과 같은 규칙들을 따를 것을 권고해요. 
 
 단, 위반 시에는 사안에 따라서 모더레이터의 재량에 따른 제재가 있을 수도 있어요.
-### 2-1. 혐오 발언의 금지
-인종, 국가, 학력, 신체 조건, 성별, 성 정체성, 성적 지향, 사상 또는 정치적 의견 등에 따른 혐오 발언을 하는 것을 금지해요. 특히 이 사안의 경우 엄중하게 처벌이 내려질 수 있어요.
+### 2-1. 차별 및 혐오 발언의 금지
+인종, 국가, 학력, 신체 조건, 성별, 성 정체성, 성적 지향, 사상 또는 정치적 의견 등에 따른 차별 및 혐오 발언을 하는 것을 금지해요. 특히 이 사안의 경우 엄중하게 처벌이 내려질 수 있어요.
 ### 2-2. 남들이 보기에 불쾌할 수 있는 글과 미디어의 NSFW 또는 CW 의무
 남들이 보기에 불쾌할 수 있는 글과 미디어는 적절한 경고와 함께 CW(Hide content) 또는 NSFW로 표시하기 기능을 이용해주세요.
 
